src/main/java/semantic/symbolTable/test/failing/redefinedImplement.ru
/? MissingConstructorException
impl A {
    fn someFunction() -> void {}
}

impl A {
    fn someFunction() -> void {}
}

start {}

/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 6 | No se encontró el método constructor para el struct: A |